--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spe = \"rice\"\n",
+    "spe = \"yeast1\"\n",
     "\n",
     "batch_size = 128\n",
     "lr = 0.001\n",
@@ -571,27 +571,21 @@
     "\n",
     "        self.conv4 = nn.Conv1d(2 * feature_dim, feature_dim, kernel_size=3,\n",
     "                               padding=1)\n",
-    "        layer4 = TransformerLayer(n_heads=3, d_model=feature_dim,\n",
-    "                                  ff_units=10, dropout=0.2)\n",
-    "        self.encoder4 = TransformerEncoder(layer4, n_layers=2)\n",
-    "\n",
-    "        self.conv5 = nn.Conv1d(2 * feature_dim, feature_dim, kernel_size=3,\n",
-    "                               padding=1)\n",
     "\n",
     "        self.pool = nn.MaxPool1d(kernel_size=3, stride=3)\n",
     "        # self.adaptive_pool = nn.AdaptiveAvgPool1d(1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x.permute(0, 2, 1)  # b, input_dim, 2000\n",
+    "        x = x.permute(0, 2, 1)  # b, input_dim, 1500\n",
     "\n",
     "        # First layer\n",
-    "        x = self.conv1(x)  # b, feature_dim, 2000,\n",
-    "        x = self.pool(x)  # b, feature_dim, 666\n",
-    "        x = x.permute(0, 2, 1)  # n, 666, feature_dim\n",
-    "        e = self.encoder1(x)  # b, 666, feature_dim\n",
-    "        x = x.permute(0, 2, 1)  # b, feature_dim, 666\n",
-    "        e = e.permute(0, 2, 1)  # b, feature_dim, 666\n",
-    "        x = torch.cat([e, x], dim=1)  # b, 2*feature_dim, 666\n",
+    "        x = self.conv1(x)  # b, feature_dim, 1500,\n",
+    "        x = self.pool(x)  # b, feature_dim, 500\n",
+    "        x = x.permute(0, 2, 1)  # n, 500, feature_dim\n",
+    "        e = self.encoder1(x)  # b, 500, feature_dim\n",
+    "        x = x.permute(0, 2, 1)  # b, feature_dim, 500\n",
+    "        e = e.permute(0, 2, 1)  # b, feature_dim, 500\n",
+    "        x = torch.cat([e, x], dim=1)  # b, 2*feature_dim, 500\n",
     "\n",
     "        # Second layer\n",
     "        x = self.conv2(x)\n",
@@ -600,7 +594,7 @@
     "        e = self.encoder2(x)\n",
     "        x = x.permute(0, 2, 1)\n",
     "        e = e.permute(0, 2, 1)\n",
-    "        x = torch.cat([e, x], dim=1)  # b, 2*feature_dim, 222\n",
+    "        x = torch.cat([e, x], dim=1)  # b, 2*feature_dim, 166\n",
     "\n",
     "        # Third layer\n",
     "        x = self.conv3(x)\n",
@@ -609,102 +603,78 @@
     "        e = self.encoder3(x)\n",
     "        x = x.permute(0, 2, 1)\n",
     "        e = e.permute(0, 2, 1)\n",
-    "        x = torch.cat([e, x], dim=1)  # b, 2*feature_dim, 77\n",
+    "        x = torch.cat([e, x], dim=1)  # b, 2*feature_dim, 55\n",
     "\n",
-    "        # Fourth layer\n",
-    "        x = self.conv4(x)\n",
-    "        x = self.pool(x)\n",
-    "        x = x.permute(0, 2, 1)\n",
-    "        e = self.encoder4(x)\n",
-    "        x = x.permute(0, 2, 1)\n",
-    "        e = e.permute(0, 2, 1)\n",
-    "        x = torch.cat([e, x], dim=1)  # b, 2*feature_dim, 28\n",
-    "\n",
-    "        x = self.conv5(x)  # b, feature_dim, 28\n",
-    "        # x = self.adaptive_pool(x) # b, feature_dim, 1\n",
-    "        # x = x.squeeze(-1)  # b, feature_dim\n",
-    "        x = x.permute(0, 2, 1)  # b, 28, feature_dim\n",
-    "        return x\n",
-    "\n",
-    "\n",
-    "class Classifier(nn.Module):\n",
-    "    def __init__(self, input_dim):\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.fc1 = nn.Linear(input_dim, 2 * input_dim)\n",
-    "        self.bn1 = nn.BatchNorm1d(2 * input_dim)\n",
-    "        self.fc2 = nn.Linear(2 * input_dim, input_dim)\n",
-    "        self.bn2 = nn.BatchNorm1d(input_dim)\n",
-    "        self.fc3 = nn.Linear(input_dim, input_dim // 2)\n",
-    "        self.bn3 = nn.BatchNorm1d(input_dim // 2)\n",
-    "        self.fc4 = nn.Linear(input_dim // 2, input_dim // 4)\n",
-    "        self.bn4 = nn.BatchNorm1d(input_dim // 4)\n",
-    "        self.fc5 = nn.Linear(input_dim // 4, 1)\n",
-    "\n",
-    "        self.dropout = nn.Dropout(0.5)\n",
-    "        self.leaky_relu = nn.LeakyReLU(0.3)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.fc1(x)\n",
-    "        x = self.bn1(x)\n",
-    "        x = self.leaky_relu(x)\n",
-    "        x = self.dropout(x)\n",
-    "\n",
-    "        x = self.fc2(x)\n",
-    "        x = self.bn2(x)\n",
-    "        x = self.leaky_relu(x)\n",
-    "        x = self.dropout(x)\n",
-    "\n",
-    "        x = self.fc3(x)\n",
-    "        x = self.bn3(x)\n",
-    "        x = self.leaky_relu(x)\n",
-    "        x = self.dropout(x)\n",
-    "\n",
-    "        x = self.fc4(x)\n",
-    "        x = self.bn4(x)\n",
-    "        x = self.leaky_relu(x)\n",
-    "        x = self.dropout(x)\n",
-    "\n",
-    "        x = self.fc5(x)\n",
-    "\n",
-    "        x = x.squeeze(-1)\n",
-    "        x = F.sigmoid(x)\n",
+    "        x = self.conv4(x)  # b, feature_dim, 55\n",
+    "        x = x.permute(0, 2, 1)  # b, 55, feature_dim\n",
     "\n",
     "        return x\n",
     "\n",
     "\n",
     "class InteractionModel(nn.Module):\n",
-    "    def __init__(self, featuring, classifier):\n",
+    "    def __init__(self, featuring):\n",
     "        super().__init__()\n",
     "\n",
     "        self.featuring = featuring\n",
-    "        self.classifier = classifier\n",
+    "        self.feature_dim = featuring.feature_dim\n",
+    "\n",
     "        layer = TransformerLayer(n_heads=3,\n",
-    "                                 d_model=2 * self.featuring.feature_dim,\n",
-    "                                 ff_units=10, dropout=0.5)\n",
+    "                                 d_model=self.feature_dim,\n",
+    "                                 ff_units=2*self.feature_dim,\n",
+    "                                 dropout=0.5)\n",
     "        self.encoder = TransformerEncoder(layer, n_layers=2)\n",
     "\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Linear(feature_dim, 2048),\n",
+    "            nn.ReLU(),\n",
+    "            nn.BatchNorm1d(2048),\n",
+    "            nn.Dropout(0.5),\n",
+    "\n",
+    "            nn.Linear(2048, 1024),\n",
+    "            nn.ReLU(),\n",
+    "            nn.BatchNorm1d(1024),\n",
+    "            nn.Dropout(0.5),\n",
+    "\n",
+    "            nn.Linear(1024, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.BatchNorm1d(512),\n",
+    "            nn.Dropout(0.5),\n",
+    "\n",
+    "            nn.Linear(512, 128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.BatchNorm1d(128),\n",
+    "\n",
+    "            nn.Linear(128, 8),\n",
+    "            nn.ReLU(),\n",
+    "            nn.BatchNorm1d(8),\n",
+    "            nn.Dropout(0.5),\n",
+    "\n",
+    "            nn.Linear(8, 1)\n",
+    "        )\n",
+    "\n",
     "    def forward(self, x1, x2):\n",
-    "        x1 = self.featuring(x1)  # b, 28, feature_dim\n",
-    "        x2 = self.featuring(x2)  # b, 28, feature_dim\n",
-    "        x = torch.cat((x1, x2), dim=2)  # b, 28, 2*feature_dim\n",
-    "        x = self.encoder(x)\n",
-    "        x = torch.mean(x, dim=1)  # b, 2*feature_dim\n",
+    "        x1 = self.featuring(x1)  # b, 55, feature_dim\n",
+    "        x2 = self.featuring(x2)  # b, 55, feature_dim\n",
+    "        x = torch.cat((x1, x2), dim=1)  # b, 110, feature_dim\n",
+    "        x = self.encoder(x) # b, 110, feature_dim\n",
+    "        x = torch.mean(x, dim=1)  # b, feature_dim\n",
     "        x = self.classifier(x)\n",
-    "        return x\n",
+    "        x = F.sigmoid(x)\n",
+    "        return x.squeeze()\n",
+    "\n",
     "\n",
     "for k in range(5):\n",
     "    print(f\"Kfold: ======================== {k+1} ========================\")\n",
-    "    train_file = os.path.join(data_dir, spe, kfold_dir, f\"train_fold_{k+1}.tsv\")\n",
+    "    train_file = os.path.join(\n",
+    "        data_dir, spe, kfold_dir, f\"train_fold_{k+1}.tsv\")\n",
     "    val_file = os.path.join(data_dir, spe, kfold_dir, f\"val_fold_{k+1}.tsv\")\n",
     "    train_loader = load_data(train_file, batch_size, embedding_h5, train=True)\n",
     "    val_loader = load_data(val_file, batch_size, embedding_h5, train=False)\n",
-    "    \n",
+    "\n",
     "    input_dim = 13\n",
     "    feature_dim = 24\n",
     "    featuring = Featuring(input_dim, feature_dim)\n",
-    "    classifier = Classifier(2 * feature_dim)\n",
-    "    model = InteractionModel(featuring, classifier).to(device)\n",
+    "    model = InteractionModel(featuring).to(device)\n",
     "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "\n",
     "    train_model(model, train_loader, val_loader, optimizer, epochs, device)"
